--- a/style.css
+++ b/style.css
@@ -67,3 +67,15 @@ button:hover {
   -webkit-columns: 2;
   -moz-columns: 2;
 }
+
+@media screen and (max-width: 400px) {
+    button {
+        margin: 2px;
+        padding: 5px;
+        font-size: 0.7rem;
+    }
+
+    .slurs {
+        width: 80vw;
+    }
+}
